<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Synthotron</string>

    <string-array name="menu_options">
        <item>Mastering</item>
        <item>Subtractive Synth Tone Control</item>
        <item>FM Synth Tone Control</item>
        <item>Drum Machine Tone Control</item>
        <item>Piano Roll</item>
        <item>Sequencer</item>
    </string-array>
    <string-array name="scales">
        <item>Diatonic Major</item>
        <item>Diatonic Minor</item>
        <item>Pentatonic Major</item>
        <item>Pentatonic Minor</item>
        <item>Major Blues</item>
        <item>Minor Blues</item>
    </string-array>
    <string-array name="instruments">
        <item>Subtractive Synthesizer</item>
        <item>FM Synthesizer</item>
        <item>Drum Machine</item>
    </string-array>
    <string-array name="tonics">
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
        <item>A</item>
        <item>A#</item>
        <item>B</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_settings">Settings</string>
    <string name="playButton">Sound On</string>
    <string name="pauseButton">Sound Off</string>
    <string name="oscOn">Oscillator On</string>
    <string name="oscOff">Oscillator Off</string>
    <string name="micOn">Microphone On</string>
    <string name="micOff">Microphone Off</string>
    <string name="subSynthOn">SubSynth On</string>
    <string name="subSynthOff">SubSynth Off</string>
    <string name="C">C</string>
    <string name="E">E</string>
    <string name="G">G</string>
    <string name="SynthNotes">Play synth:</string>
    <string name="playScale">Play arpeggio</string>
    <string name="tempo">Tempo:</string>
    <string name="drumNotes">Play drums:</string>
    <string name="bassDrum">Bass drum</string>
    <string name="snareDrum">Snare drum</string>
    <string name="reverb">Set reverb:</string>
    <string name="hihat">Hi Hat</string>
    <string name="title_activity_subtractive_synth_tone_control">SubtractiveSynthToneControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="configureTone">Configure tone</string>
    <string name="stop">Stop audio</string>
    <string name="start">Restart audio</string>
    <string name="osc1label">Oscillator 1</string>
    <string name="osc1transposeLabel">Transpose</string>
    <string name="osc2label">Oscillator 2</string>
    <string name="osc2transposeLabel">Transpose</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reverbColumn">REVERB</string>
    <string name="masterColumn">MASTER</string>
    <string name="testNotes">Test notes</string>
    <string name="lfoColumn">LFO</string>
    <string name="oscillatorsColumn">OSCILLATORS</string>
    <string name="adsrColumn">ADSR</string>
    <string name="filterColumn">FILTER</string>
    <string name="modeLabel">Mode</string>
    <string name="saveSubSynthTone">Save</string>
    <string name="loadSubSynthTone">Load</string>
    <string name="limiterColumn">LIMITER</string>
    <string name="saveFMSynthTone">Save</string>
    <string name="loadFMSynthTone">Load</string>
    <string name="carrierLabel">Carrier</string>
    <string name="modulatorLabel">Modulator</string>
    <string name="ringmodColumn">RING MOD</string>
    <string name="compressorColumn">COMPRESSOR</string>
    <string name="saveDrumMachineTone">Save</string>
    <string name="loadDrumMachineTone">Load</string>
    <string name="equalizerColumn">EQUALIZER</string>
    <string name="highpass">High Pass</string>
    <string name="lowpass">Low Pass</string>
    <string name="peak">Peak</string>

</resources>
