<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cmu.ece.ece551.clicktrack.TestClickTrack"
    tools:ignore="MergeRootFrame"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SynthNotes"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
        <ToggleButton
                android:id="@+id/cButton"
                android:textOff="@string/C"
                android:textOn="@string/C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ToggleButton
                android:id="@+id/eButton"
                android:textOff="@string/E"
                android:textOn="@string/E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ToggleButton
                android:id="@+id/gButton"
                android:textOff="@string/G"
                android:textOn="@string/G"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ToggleButton
            android:id="@+id/scaleButton"
            android:textOff="@string/playScale"
            android:textOn="@string/playScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tempoText"
            android:text="@string/tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <SeekBar
            android:id="@+id/tempoBar"
            android:layout_width="330dp"
            android:layout_height="wrap_content"/>

    <Space android:layout_width="1dp"
           android:layout_height="30dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drumNotes"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
        <Button android:id="@+id/bassButton"
                android:text="@string/bassDrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/snareButton"
                android:text="@string/snareDrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/hihatButton"
                android:text="@string/hihat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
