<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    tools:context="edu.cmu.ece.ece551.clicktrack.MasterControls">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/masterColumn"
                android:textStyle="bold"
                android:textSize="20sp"/>

        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/drumMachineGainKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center" />

        <Space
                android:layout_width="1dp"
                android:layout_height="25dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/saveDrumMachineButton"
                android:text="@string/saveDrumMachineTone"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/loadDrumMachineButton"
                android:text="@string/loadDrumMachineTone"/>

        <Space
                android:layout_width="1dp"
                android:layout_height="25dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/testNotes"/>
        <Button
                android:id="@+id/drumMachineBassButton"
                android:text="@string/bassDrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:id="@+id/drumMachineSnareButton"
                android:text="@string/snareDrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:id="@+id/drumMachineHihatButton"
                android:text="@string/hihat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/ringmodColumn"
                android:textStyle="bold"
                android:textSize="20sp"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ringmodFreqKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ringmodWetnessKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/compressorColumn"
                android:textStyle="bold"
                android:textSize="20sp"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/compressionThresholdKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/compressionRatioKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
