<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    tools:context="edu.cmu.ece.ece551.clicktrack.MasterControls">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/equalizerColumn"
                android:textStyle="bold"
                android:textSize="20sp"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/highpass"/>
                <edu.cmu.ece.ece551.uis.KnobView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/eqLowCutoffKnob"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/lowpass"/>
                <edu.cmu.ece.ece551.uis.KnobView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/eqHighCutoffKnob"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/peak"/>
                <edu.cmu.ece.ece551.uis.KnobView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/eqPeakCutoffKnob"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal"/>
                <edu.cmu.ece.ece551.uis.KnobView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/eqPeakGainKnob"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal"/>
                <edu.cmu.ece.ece551.uis.KnobView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/eqPeakQKnob"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/reverbColumn"
                android:textStyle="bold"
                android:textSize="20sp"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/reverbGainKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/reverbWetnessKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/reverbTimeKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/limiterColumn"
                android:textStyle="bold"
                android:textSize="20sp"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/limiterGainKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
        <edu.cmu.ece.ece551.uis.KnobView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/limiterThresholdKnob"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
